Fix word-wrap problem

--- a/source/styles/base.styl
+++ b/source/styles/base.styl
@@ -26,6 +26,11 @@ body
   margin margin-mobile auto
   font-family "Computer Modern"
 
+  // break and wrap
+  word-break break-word
+  word-wrap break-word
+  hyphens auto
+
   +desktop()
     margin margin-desktop auto
 
