--- a/source/styles/content.styl
+++ b/source/styles/content.styl
@@ -14,10 +14,6 @@
 header, .item
   text-align center
 
-  word-break break-word
-  word-wrap break-word
-  hyphens auto
-
   &>h1, &>h2
     margin 0.75rem 0
 
